<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cetcnav.com.inl2_app_sample.ui.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/main_mqtt_domain"
        android:ems="10"
        android:id="@+id/edit_text_mqtt_domain"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/main_mqtt_port"
        android:ems="10"
        android:id="@+id/edit_text_mqtt_port"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/main_mqtt_pub"
        android:ems="10"
        android:id="@+id/edit_text_mqtt_pub"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/main_ring_mac"
        android:ems="10"
        android:id="@+id/edit_text_ring_mac"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/main_map_url"
        android:ems="10"
        android:id="@+id/edit_text_map_url"
        />

    <Button
        android:text="@string/main_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/button_main_ok"
         />
</LinearLayout>
